<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">quizdroid2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_quiz_giver">QuizGiver</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="math">Math</string>
    <string name="physics">Physics</string>
    <string name="marvel_super_heroes">Marvel Super Heroes</string>
    <string name="question_number">Number of Questions</string>
    <string name="question">Question</string>
    <string name="choice">Choice</string>
    <string name="submit">Submit</string>
    <string name="topic_title_placeholder">Topic Title</string>
    <string name="topic_description_placeholder">Description</string>
    <string name="topic_number_questions_placeholder">Number of Questions</string>
    <string name="begin">Begin</string>
    <string name="test">Test</string>
    <string name="your_answer">your_answer</string>
    <string name="answerIs">answerIs</string>
    <string name="numCorrect">numCorrect</string>
    <string name="totalQuestions">totalQuestions</string>
    <string name="next">next</string>

</resources>
